
- Added missing registration for IFileInfo adapter for ICommunityRootFolder.

- Fixed bug in evolve2 step that updated 'Last Activity' for every community.

- Added missing view registrations for mailin monitor utility.

- Fixed bug with attachments on mailin caused by a bogus assertion which would
  usually fail.

- Bug fix: Make sure acl's are properly set on profiles during import.

- LP#494582 Added opensearch support to people directory.  (Ported from OSI.)

- Bug fix: Make sure custom_folder_view uses get_layout_provider utility
  method.

- Explicit registration of an IFolderAddables is no longer required.  A
  suitable default is found if there is no registration.  Added
  'get_folder_addables' utility method.

- Created a default footer that just contains the offices listing component of
  OSI's footer.

- Bug fix: Allow add/edit forms for calendar event to still work if there is no
  category.  Categories are not used outside of the context of the calendar
  tool, and calendar events can appear in regular old folders in intranets.
  This allows to again create and edit events in the 'network-news' folder used
  in most intranets..

3.15 (2009-12-14)
-----------------

- LP #496330: Clicking the (+) from the calendar month view now uses
  a default of 9:00am instead of 12:00am.

- LP #494701: Editing a calendar event now populates the form with
  the correct times.

- LP #492346: Clicking the (+) button to add a new event on the calendar
  views now populates a default date and time on the form based on the
  context of where (+) was clicked.

- LP #491991: An event's calendar category is now displayed when
  viewing the event.

- LP #491986: Constrain width of category selector on calendar setup page.

- Increase performance of jQuery selectors in calendar daily/weekly view

- Fix editing of calendar categories/layers when names have spaces

- Calendar categories and layers are now managed on the same setup page.
